--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <p class="section__text__p2">Full-Stack Developer</p>
         <div class="btn-container">
           <a
-            href="./images/React resume.pdf"
+            href="React resume.pdf"
             download
-            onclick="window.open('./resume/Resume.pdf')"
+            onclick="window.open('React resume.pdf')"
           >
             <button class="btn btn-color-2">Download CV</button>
           </a>
